[gd_scene load_steps=5 format=3 uid="uid://btlr24f4nrt14"]

[ext_resource type="Script" uid="uid://cj6u1531cvcck" path="res://ui/screen_ui/confirmation_menu/confirmation_menu.gd" id="1_bncon"]
[ext_resource type="PackedScene" uid="uid://bro7uo2viqqx3" path="res://ui/screen_ui/elements/panel_container_wrapper.tscn" id="1_oci4a"]
[ext_resource type="Theme" uid="uid://b6tppincjordy" path="res://ui/main_ui_theme.tres" id="2_7n8wo"]
[ext_resource type="PackedScene" uid="uid://wt1hrs7civkc" path="res://ui/screen_ui/elements/screen_button.tscn" id="3_v2ufk"]

[node name="ConfirmationMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bncon")

[node name="PanelContainerWrapper" parent="." instance=ExtResource("1_oci4a")]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
offset_left = -100.0
offset_top = -39.0
offset_right = 100.0
offset_bottom = 39.0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainerWrapper"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainerWrapper/MarginContainer"]
layout_mode = 2

[node name="Message" type="RichTextLabel" parent="PanelContainerWrapper/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_7n8wo")
bbcode_enabled = true
text = "Continue?"
fit_content = true
scroll_active = false

[node name="Control" type="Control" parent="PanelContainerWrapper/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainerWrapper/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="DeclineButton" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_v2ufk")]
unique_name_in_owner = true
layout_mode = 2
text = "No"

[node name="AcceptButton" parent="PanelContainerWrapper/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_v2ufk")]
unique_name_in_owner = true
layout_mode = 2
text = "Yes"
